data/derived/fa15/progs/unify/prog1200.ml.out
Characters 15-26:
  let _ = helper [9;9;9;9;9];;
                 ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> string
